# thermalplant

./: .env.template  .gitignore  LICENSE  ReadMe.md  Taskfile.yaml  ci.Dockerfile  docker-compose.yaml
ci/: .env.ci.template
docs/: readme.md
nginx/: nginx.conf
prometheus/: prometheus.yaml
services/client/: Dockerfile  pyproject.toml
services/client/app/: main.py
services/opc_scraper/: Dockerfile  ReadMe.md  pyproject.toml
services/opc_scraper/app/: ddl.sql  main.py
services/opc_server/: Dockerfile  ReadMe.md  pyproject.toml
services/opc_server/app/: main.py  sensors.py
services/sensors/: Dockerfile  ReadMe.md  Taskfile.yaml  bug.txt  pyproject.toml
services/sensors/app/: log_utils.py  main.py  sensors.py
services/sensors/app/sensors/: __init__.py  audio.py  audio_gpu.py  main.py  rpm.py  temp.py  test.py  thermalsensors.py  voltage.py
services/sensors/test/: conftest.py  test_rpm.py  test_temp.py
