[tool.poetry]
name = "OPC client to DB"
version = "0.1.0"
description = "Gets values from OPC server and writes them to a DB"
authors = ["Pieter Geelen <pieter@geelen.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rpi-gpio = "^0.7.1"
asyncua = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
