[project]
name = "opc-scraper"
version = "0.1.0"
description = "Executes migrations at the start and scrapes the OPC server"
authors = [{ name = "Pieter Geelen", email = "pieter@geelen.io" }]
license = "MIT"
requires-python = ">=3.12"

dependencies = [
  "sqlalchemy==2.0.37",
  "psycopg2-binary==2.9.10",
  "pandas==2.2.3",
  "asyncua==1.1.5"
]

[project.optional-dependencies]
dev = ["ruff==0.8.5"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
