[project]
name = "opc-server"
version = "0.1.0"
description = "OPC Server setup for scraping metrics from API Server"
authors = [{ name = "Pieter Geelen", email = "pieter@geelen.io" }]
license = "MIT"
requires-python = ">=3.12"

dependencies = [
  "asyncua==1.1.5",
  "requests==2.32.3"
]

[project.optional-dependencies]
dev = ["ruff==0.8.5"]
