 [tool.poetry]
name = "sensors"
version = "0.1.0"
description = "An API for wrapping the sensor logic"
authors = ["Pieter Geelen <pieter@geelen.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
docformatter = "^1.7.2"
fastapi-health = "^0.4.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
numpy = "^1.25.0"
python-multipart = "^0.0.6"
httpx = "^0.24.1"
pytest = "^7.3.2"
slowapi = "^0.1.8"
gpiozero = "^2.0.1"
spidev = "^3.6"
librosa = "^0.10.2.post1"
pyaudio = "^0.2.11"
lgpio = "^0.2.2.0"
psutil = "^7.0.0"
pulsectl-asyncio = "^1.2.2"
pulsectl = "24.11.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true
