[project]
name = "sensors"
version = "0.1.0"
description = "An API for wrapping the sensor logic"
authors = [{ name = "Pieter Geelen", email = "pieter@geelen.io" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.14",
    "numpy>=1.26.0",
    "pydantic>=2.11.7",
    "docformatter==1.7.2",
    "fastapi-health==0.4.0",
    "uvicorn[standard]==0.22.0",
    "python-multipart==0.0.7",
    "httpx==0.24.1",
    "pytest==7.3.2",
    "slowapi==0.1.8",
    "gpiozero==2.0.1",
    "spidev==3.6",
    "librosa==0.10.2.post1",
    "pyaudio==0.2.11",
    "lgpio==0.2.2.0",
    "psutil==7.0.0",
    "pulsectl-asyncio==1.2.2",
    "pulsectl==24.11.0",
    "adafruit-circuitpython-ads1x15==2.4.2",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchaudio>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchaudio>=0.22.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
